# classical_cell_segmentation

./: .gitignore  CellSegmentationClassic.ipynb  README.md
binder/: apt.txt  environment.yml  postBuild
cell_segmentation_classic/: pyproject.toml
