[project]
name = "cell-segmentation-classic"
version = "0.1.0"
description = "Classical method to segment cells"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.7",
    "jupyterlab-widgets>=3.0.15",
    "matplotlib>=3.10.6",
    "napari>=0.6.4",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "pyqt6>=6.9.1",
    "scikit-image>=0.25.2",
    "scipy>=1.16.2",
    "tifffile>=2025.9.9",
]
